# image_processor

./: .gitignore  Cargo.toml  README.md  run.sh
blur_plugin/: Cargo.toml
blur_plugin/src/: lib.rs
ip/: Cargo.toml
ip/src/: args.rs  error.rs  main.rs  plugin.rs
ip/tests/: integration.rs
mirror_plugin/: Cargo.toml
mirror_plugin/src/: lib.rs
plugin_error/: Cargo.toml
plugin_error/src/: lib.rs
tests/config/: blur_box_mild.json  blur_box_strong.json  blur_gauss.json  mirror_all.json  mirror_h.json  mirror_v.json
