[workspace]
resolver = "3"
members = ["ip", "blur_plugin", "mirror_plugin", "plugin_error"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
image = "0.25"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plugin_error = { path = "./plugin_error" }